--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,8 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
+    <!--Menu text-->
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_sign_out">Logout</string>
@@ -131,6 +133,7 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="save_credentials">Save credentials</string>
     <string name="max_characters">Max number of characters is 140</string>
+    <string name="share_to">Share tweet to...</string>
 
     <!--Constants-->
 
