--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,11 @@
     <!--Error messages-->
 
     <string name="invalid_number_of_characters">Invalid number of characters</string>
+    <string name="unable_to_send_tweet">Your Tweet couldn\'t be sent now. We\'ll send it later ;)</string>
+
+    <!--Alert messages-->
+
+    <string name="offline_tweets_sent">Your offline tweet were sent!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
