--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -157,4 +157,22 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="welcome_to_my_timeline">Bem-vindo a minha Timeline</string>
     <string name="tweet">Tweet</string>
+
+    <!--Settings-->
+
+    <string name="pref_title_sync_frequency">Sincronização Automática</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutos</item>
+        <item>30 minutos</item>
+        <item>12 horas</item>
+        <item>1 dia</item>
+        <item>Nunca</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>720</item>
+        <item>1440</item>
+        <item>-1</item>
+    </string-array>
 </resources>
