--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,16 @@
         completions."
     </string>
 
+    <!--Fake tweet example-->
+    <string name="tweet_user_description">
+        Penguin its a Twitter CopyCat user since the beginning.
+        He likes cold places and to hangout with his penguin friends.
+    </string>
+    <string name="tweet_user_name">Mr. Penguin</string>
+    <string name="tweet_text">I\'m not a Pinguin!</string>
+
+
+
     <!--Menu text-->
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
